Fix navbar anchors
Take the anchors within the <li> to meet the w3 requirements

--- a/index.html
+++ b/index.html
@@ -20,15 +20,9 @@
         </div>
         <nav class="header__nav">
             <ul class="header__ul">
-                <a href="#presentation" class="header__a">
-                    <li class="header__li">Home</li>
-                </a>
-                <a href="#projects" class="header__a">
-                    <li class="header__li">Projects</li>
-                </a>
-                <a href="#contact" class="header__a">
-                    <li class="header__li">Contact</li>
-                </a>
+                <li class="header__li"><a href="#presentation" class="header__a">Home</a></li>
+                <li class="header__li"><a href="#projects" class="header__a">Projects</a></li>
+                <li class="header__li"><a href="#contact" class="header__a">Contact</a></li>
             </ul>
         </nav>
     </header>
