Add basic meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="languaje" content="english" />
+  <meta name="copyright" content="Fabián Ponce" />
+  <meta name="author" content="Fabián Ponce" />
+  <meta name="audience" content="all" />
+  <meta name="description" content="I'm Fabián Ponce, I'm a web developer and this webpage is my online portfolio. It contains the projects I've done and contact information to work together." />
+  <meta name="keywords" content="portfolio, web development, projects" />
+  <meta name="robots" content="index, all, follow" />
+  <meta name="category" content="web development" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="CSS/mobile.css" />
   <link rel="stylesheet" href="CSS/tablet.css" media="screen and (min-width: 768px)" />
