--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <h1>Fabián Ponce's Portfolio</h1>
+      <img class="logo" src="./img/fp-logo.png" alt="logo" width="140px" />
     </div>
     <nav class="header__nav">
       <ul class="header__ul">
