--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
   <footer class="footer">
     <h2 class="footer__text">Designed by: Fabián Ponce</h2>
+    <img src="./img/el-puerco.png" alt="a cartoon pig" />
   </footer>
 </body>
 
