--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="languaje" content="english" />
+  <meta name="language" content="english" />
   <meta name="copyright" content="Fabián Ponce" />
   <meta name="author" content="Fabián Ponce" />
   <meta name="audience" content="all" />
