--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="CSS/tablet.css" media="screen and (min-width: 768px)" />
   <link rel="stylesheet" href="CSS/desktop.css" media="screen and (min-width: 1280px)" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200;400;700&display=swap" rel="stylesheet">
   <title>Fabián Ponce's Portfolio</title>
 </head>
