Add dynamic greeting

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <main class="main">
     <section id="presentation" class="section hero">
       <div class="color-overlay"></div>
-      <h1 class="section__header">Hello world, my name is <br /><span class="hero__my-name">Fabián
+      <h1 class="section__header">Hello <span id="dynamicGreetings">world</span>, my name is <br /><span class="hero__my-name">Fabián
           Ponce</span><br /><span class="section__span">and I am a web developer</span></h1>
     </section>
 
@@ -120,6 +120,8 @@
     <h2 class="footer__text">Designed by: Fabián Ponce</h2>
     <img id="puerco" src="./img/el-puerco.png" alt="a cartoon pig" />
   </footer>
+
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
